--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,8 +41,6 @@ jobs:
     -
       name: Create a release
       uses: action-pack/github-release@v2
-      env:
-        GITHUB_TOKEN: ${{ secrets.REPO_ACCESS_TOKEN }}
       with:
         tag: "v${{ vars.MAJOR }}.${{ vars.MINOR }}"
         title: "v${{ vars.MAJOR }}.${{ vars.MINOR }}"
@@ -50,11 +48,10 @@ jobs:
           ${{ steps.changelog.outputs.changes }}
 
           **Full Changelog**: https://github.com/${{ github.repository }}/compare//${{ env.previousTag }}...v${{ vars.MAJOR }}.${{ vars.MINOR }}
+        token: ${{ secrets.REPO_ACCESS_TOKEN }}
     -
       name: Update major release
       uses: action-pack/github-release@v2
-      env:
-        GITHUB_TOKEN: ${{ secrets.REPO_ACCESS_TOKEN }}
       with:
         tag: "v${{ vars.MAJOR }}"
         title: "v${{ vars.MAJOR }}"
@@ -62,6 +59,7 @@ jobs:
           ${{ steps.changelog.outputs.changes }}
 
           **Full Changelog**: https://github.com/${{ github.repository }}/compare//${{ env.previousTag }}...v${{ vars.MAJOR }}.${{ vars.MINOR }}
+        token: ${{ secrets.REPO_ACCESS_TOKEN }}
     -
       name: Increment version variable
       uses: action-pack/bump@v2
